grid gap fix

--- a/index.css
+++ b/index.css
@@ -312,11 +312,15 @@ hr {
   display: grid;
   grid-template-rows: auto auto;
   grid-template-columns: auto auto;
+  grid-row-gap: 2em;
+  row-gap: 2em;
+  grid-column-gap: 2em;
+  column-gap: 2em;
 }
 
 .feature {
   /* width: 30em; */
-  margin: 0.6em 1em;
+  /* margin: 0.6em 1em; */
 }
 
 .feature__title {
